# code-review-mcp

./: .gitignore  DISTRIBUTION.md  MANIFEST.in  README.md  mcp.json  pyproject.toml  requirements.txt  setup.py
.github/workflows/: publish.yml  test.yml
src/code_review_mcp/: __init__.py  server.py
template_prompt/: template_prompt_v1.md
tests/: __init__.py  test_server.py
