[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "code-review-mcp"
version = "0.1.0"
description = "MCP server for automated code review and bug detection"
authors = [{name = "Bobby", email = "your-email@example.com"}]
license = {text = "Apache-2.0"}
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "mcp>=1.0.0",
    "pydantic>=2.0.0",
    "typing-extensions>=4.8.0",
]

[project.urls]
Homepage = "https://github.com/bobbymuls/code-review-mcp"
Repository = "https://github.com/bobbymuls/code-review-mcp"
Issues = "https://github.com/bobbymuls/code-review-mcp/issues"

[project.scripts]
code-review-mcp = "code_review_mcp.server:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
